# hyperspot

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  dylint.toml  release-plz.toml
.cypilot-adapter/: AGENTS.md  artifacts.json
.cypilot/config/: AGENTS.md
apps/cyberware-example-server/: Cargo.toml
apps/hyperspot-server/: Cargo.toml
config/: e2e-local.yaml  e2e-scope-enforcement.yaml  e2e-tr-authz.yaml  mini-chat.yaml  no-auth.yaml  no-db.yaml  quickstart-windows.yaml  quickstart.yaml  server.yaml
docs/: ARCHITECTURE_MANIFEST.md  AUTH.md  MODKIT_PLUGINS.md  MODULES.md  QUICKSTART_GUIDE.md  REPO_PLAYBOOK.md  REQUIREMENTS.md  TESTING.md  TRACING_SETUP.md
docs/api/: api.json
docs/authorization/: AUTH.md  AUTHN_JWT_OIDC_PLUGIN.md  AUTHZ_USAGE_SCENARIOS.md  RESOURCE_GROUP_MODEL.md  SCENARIOS.md  TENANT_MODEL.md
docs/design/: AUTH.md  AUTH_SCENARIOS.md
docs/modkit_unified_system/: 01_overview.md  02_module_layout_and_sdk_pattern.md  03_clienthub_and_plugins.md  06_authn_authz_secure_orm.md  06_secure_orm_db_access.md  10_checklists_and_templates.md  (+1 more)
guidelines/: DEPENDENCIES.md  MODULE_REQUIREMENTS.md  NEW_MODULE.md  SECURITY.md
modules/system/authn_resolver/authn_resolver-gw/: Cargo.toml
modules/system/authn_resolver/authn_resolver-gw/src/: config.rs  lib.rs  module.rs
modules/system/authn_resolver/authn_resolver-gw/src/domain/: error.rs  local_client.rs  mod.rs  service.rs
openspec/: project.md
scripts/: ci.py  coverage.py
testing/: requirements.txt
workflows/: NEW_MODULE_PIPELINE.md
(+360 files in other folders)
